Fix Button Alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,10 @@ body {
   overflow-x: hidden;
 }
 
+body {
+  overflow-x: hidden !important;
+}
+
 * {
   padding: 0;
   margin: 0;
